--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "water-consumption-app",
   "version": "1.0.0",
@@ -8,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
