--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
