--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "nodemailer": "^7.0.3",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6"
   }
